<resources>
    <string name="app_name">Grabble</string>
    <string name="button1">Go to Map</string>
    <string name="button2">Instructions</string>
    <string name="welcome_to_grabble">Welcome to Grabble</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">653233644857256</string>
    <string name="fb_login_protocol_scheme">fb653233644857256</string>

    <!--Blank fragment text strings - will remove later-->

    <string name="instructions_title">How To Play the Game</string>
    <string name="menu_my_achievements">My Achievements</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="large_text">
        Grabble is an app inspired by the games Pokemon GO and Scrabble. It shows you a virtual world in which you are challenged to collect letters distributed around the University of Edinburgh\'s Central Area.

Letters are collected by visiting their location. There is a different set of letters for each day of the week. Letters can only be collected once each day. (I.e. having visited a location to collect a letter it is not possible to move away from that location and then move back again to collect the letter a second time.)
\n\n

The object of the game is to make seven-letter words out of the letters which have been collected. Each letter has a point value associated with it and a score is assigned to a word by summing the scores of the letters in the word. The point value of each letter is given below: more commonly-occurring letters have lower values and less commonly- occurring letters have higher values.
\n\n
For the purposes of the game, a seven-letter sequence of characters is considered to be a word if it appears in the Official Grabble Dictionary 2016.
\n\n
You can also boost your chances of reaching the top with the help of power-ups. Line of sight boosters double your line of sight so you can visualize all letters around you on a larger distance. Also, word helpers offer you the chance to get the most valuable word based on the letters you\'ve collected.
\n\n
To make the game more fun and rewarding at the same time, we\'ve provided a couple of achievements for you to unlock.
\n\n
All this in a friendly and beautifully designed interface inviting you to test and enhance your scrabble and searching skills.
\n\n
Happy Grabbling!

    </string>
    <string name="user_name_tag">User Name</string>
    <string name="score_tag">Score</string>
    <string name="los_boosters_tag">Double Line of Sight Boosters Left</string>
    <string name="word_helpers_tag">Word Helpers Left</string>
    <string name="buy_more_boosters">Go To Shop</string>
    <string name="create_new_words">Create New Words</string>
    <string name="show_letters_gathered">Show Letters Gathered</string>
    <string name="profile_background">Profile Background</string>
    <string name="words_list">Create Words</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tokens_tag">Tokens Left</string>
    <string name="gems_tag">Gems Left</string>
    <string name="distance_traveled_tag">Distance Traveled</string>
    <string name="show_my_achievements">Show My Achievements</string>
    <string name="menu_shop">Shop</string>
    <string name="type_a_letter">A</string>
    <string name="created_words">Created Words</string>
    <string name="create_word">Create Word</string>
    <string name="get_suggestion">Get Suggestion</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="pref_title_display_name">Display name</string>

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <string name="or">OR</string>
    <string name="main_logo">main_logo</string>
    <string name="title_activity_shop">Shop Activity</string>

</resources>
